# Evaluaciones_Compi_2

Examen1_P1_2021/: README.md  expr_lexer.h  expr_lexer.l  expr_parser.y
Examen1_P1_2021/tests/: test_parser.cpp
Examen2_P1_2021/: CMakeLists.txt  ast_nodes.h  spl_ast.tc  test_spl.cpp
Examen2_P1_2021/cmake/: FindRE2C.cmake  FindTreeCC.cmake
Prueba1_P1_2021/: .gitignore  expr.l  expr_lexer.h
Prueba1_P1_2021/tests/: CMakeLists.txt  test_lexer.cpp
Prueba2_P1_2021/: README.md  expr.y  expr_lexer.h
Prueba2_P1_2021/tests/: test_parser.cpp
